apps/base/baikal/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baikal
  labels:
    app.kubernetes.io/name: baikal
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: baikal
  template:
    metadata:
      labels:
        app.kubernetes.io/name: baikal
    spec:
      containers:
        - name: baikal
          image: ckulka/baikal:0.10.1-nginx
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: baikal-config
              mountPath: /var/www/baikal/config
            - name: baikal-data
              mountPath: /var/www/baikal/Specific
      volumes:
        - name: baikal-config
          persistentVolumeClaim:
            claimName: baikal-config
        - name: baikal-data
          persistentVolumeClaim:
            claimName: baikal-data
