apps/base/baikal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: baikal
  labels:
    app.kubernetes.io/name: baikal
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: baikal
