apps/base/baikal/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: baikal
  namespace: baikal
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: kube-system
  hostnames:
    - baikal.nathan-fouere.com
  rules:
    - backendRefs:
        - name: baikal
          port: 80
